--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,8 @@
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "joi": "^17.7.1"
   }
 }
