--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "joi": "^17.7.1"
   }
 }
