--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,18 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.17",
+    "@types/sequelize": "^4.28.14",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
+    "sequelize-cli": "^6.6.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
-    "joi": "^17.7.1"
+    "joi": "^17.7.1",
+    "mysql2": "^3.1.2",
+    "sequelize": "^6.28.1"
   }
 }
