--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./build/server",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "db:reset": "npx sequelize-cli db:create && npx sequelize-cli db:migrate",
+    "build": "npx -y tsc",
+    "prestart": "npm run build && npm run db:reset",
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
